--- a/views/partials/single-game-stats.ejs
+++ b/views/partials/single-game-stats.ejs
@@ -1,158 +1,132 @@
-<!DOCTYPE html>
-<html lang="en"
-      dir="ltr">
+<%- include('header'); -%>
 
-<head>
-  <meta charset="utf-8" />
-
-  <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-        crossorigin="anonymous">
-  <link rel="stylesheet"
-        href="/css/argon.css" />
-  <link rel="stylesheet"
-        href="/css/styles.css" />
-  <!-- Icons -->
-  <script src="https://use.fontawesome.com/3ae882e35b.js"></script>
-  <title>Scrabble</title>
-</head>
-
-<body>
-  <!-- Sidenav -->
-  <%- include('sidenav'); -%>
-  <!-- Main content -->
-  <div class="main-content"
-       id="panel">
-    <!-- Topnav -->
-    <%- include('topnav'); -%>
-    <!-- Header -->
-    <div class="header bg-primary pb-6"
-         style="min-height: 500px; background-image: url(../assets/hannah-rodrigo-mf_3yZnC6ug-unsplash.jpg); background-size: cover; background-position: center top;">
-      <!-- Mask -->
-      <span class="mask bg-gradient-default opacity-3"></span>
-      <div class="container-fluid">
-        <div class="header-body">
-          <div class="row align-items-center py-4">
-            <div class="col-lg-6 col-7">
-              <h6 class="h2 text-white d-inline-block mb-0">
-                Scrabble Statistics</h6>
-              <nav aria-label="breadcrumb"
-                   class="d-none d-md-inline-block ml-md-4">
-              </nav>
-            </div>
-          </div>
-        </div>
-        <!-- Dark table -->
-        <div class="row">
-          <div class="col">
-            <div class="card bg-default shadow">
-              <div class="card-header bg-transparent">
-                <h3 class="text-white mb-0">Points per Round</h3>
-              </div>
-              <div class="table-responsive">
-                <table class="table align-items-center table-dark table-flush">
-                  <thead class="thead-dark">
-                    <tr>
-                      <th scope="col"
-                          class="sort"
-                          data-sort="name">Players</th>
-                      <% for (var i=0; i<findSpecificStats[0].scores.length; i++){ %>
-                      <th scope="col"
-                          class="sort"
-                          data-sort="budget"><%= i+1 %></th>
-                      <% } %>
-                    </tr>
-                  </thead>
-                  <tbody class="list">
-                    <tr>
-                      <th scope="row">
-                        <div class="budget sgs_players_name">
-                          <span class="name mb-0 text-sm"><%= findSpecificStats[0].name %></span>
-                        </div>
-                      </th>
-                      <% for (var i=0; i<findSpecificStats[0].scores.length; i++){ %>
-                      <td class="budget sgs_players_name">
-                        <%= findSpecificStats[0].scores[i] %>
-                      </td>
-                      <% } %>
-                    </tr>
-                    <tr>
-                      <th scope="row">
-                        <div class="budget sgs_players_name">
-                          <span class="name mb-0 text-sm"> <%= findSpecificStats[1].name %></span>
-                        </div>
-                      </th>
-                      <% for (var i=0; i<findSpecificStats[0].scores.length; i++){ %>
-                      <td class="budget sgs_players_name">
-                        <%= findSpecificStats[1].scores[i] %>
-                      </td>
-                      <% } %>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
+<!-- Sidenav -->
+<%- include('sidenav'); -%>
+<!-- Main content -->
+<div class="main-content"
+     id="panel">
+  <!-- Topnav -->
+  <%- include('topnav'); -%>
+  <!-- Header -->
+  <div class="header bg-primary pb-6"
+       style="min-height: 500px; background-image: url(../assets/hannah-rodrigo-mf_3yZnC6ug-unsplash.jpg); background-size: cover; background-position: center top;">
+    <!-- Mask -->
+    <span class="mask bg-gradient-default opacity-3"></span>
+    <div class="container-fluid">
+      <div class="header-body">
+        <div class="row align-items-center py-4">
+          <div class="col-lg-6 col-7">
+            <h6 class="h2 text-white d-inline-block mb-0">
+              Scrabble Statistics</h6>
+            <nav aria-label="breadcrumb"
+                 class="d-none d-md-inline-block ml-md-4">
+            </nav>
           </div>
         </div>
       </div>
-
-    </div>
-    <!-- Page content -->
-    <div class="container-fluid mt--6">
+      <!-- Dark table -->
       <div class="row">
-        <div class="col-xl-12">
-          <div class="card bg-default">
+        <div class="col">
+          <div class="card bg-default shadow">
             <div class="card-header bg-transparent">
-              <div class="row align-items-center">
-                <div class="col">
-                  <h6 class="text-light text-uppercase ls-1 mb-1">Overview</h6>
-                  <h5 class="h3 text-white mb-0">Points per Round</h5>
-                </div>
-                <div class="col">
-                  <ul class="nav nav-pills justify-content-end">
-                    <li class="nav-item mr-2 mr-md-0"
-                        data-toggle="chart"
-                        data-target="#chart-sales-dark"
-                        data-update='{"data":{"datasets":[{"data":[0, 7, 10, 10, 11, 3, 2, 60, 60]}]}}'
-                        data-prefix="$"
-                        data-suffix="k">
-                    </li>
-                  </ul>
-                </div>
-              </div>
+              <h3 class="text-white mb-0">Points per Round</h3>
             </div>
-            <div class="card-body">
-              <!-- Chart -->
-              <div class="chart">
-                <!-- Chart wrapper -->
-                <canvas id="chart-sales-dark"
-                        class="chart-canvas"></canvas>
-              </div>
+            <div class="table-responsive">
+              <table class="table align-items-center table-dark table-flush">
+                <thead class="thead-dark">
+                  <tr>
+                    <th scope="col"
+                        class="sort"
+                        data-sort="name">Players</th>
+                    <% for (var i=0; i<findSpecificStats[0].scores.length; i++){ %>
+                    <th scope="col"
+                        class="sort"
+                        data-sort="budget"><%= i+1 %></th>
+                    <% } %>
+                  </tr>
+                </thead>
+                <tbody class="list">
+                  <tr>
+                    <th scope="row">
+                      <div class="budget sgs_players_name">
+                        <span class="name mb-0 text-sm"><%= findSpecificStats[0].name %></span>
+                      </div>
+                    </th>
+                    <% for (var i=0; i<findSpecificStats[0].scores.length; i++){ %>
+                    <td class="budget sgs_players_name">
+                      <%= findSpecificStats[0].scores[i] %>
+                    </td>
+                    <% } %>
+                  </tr>
+                  <tr>
+                    <th scope="row">
+                      <div class="budget sgs_players_name">
+                        <span class="name mb-0 text-sm"> <%= findSpecificStats[1].name %></span>
+                      </div>
+                    </th>
+                    <% for (var i=0; i<findSpecificStats[0].scores.length; i++){ %>
+                    <td class="budget sgs_players_name">
+                      <%= findSpecificStats[1].scores[i] %>
+                    </td>
+                    <% } %>
+                  </tr>
+                </tbody>
+              </table>
             </div>
           </div>
         </div>
       </div>
-      <div>
-        <nav aria-label="breadcrumb"
-             class="d-none d-md-inline-block ml-md-4">
-          <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
-            <li class="breadcrumb-item"><a href="/scrabble-statistics">Return to Scrabble Statistics</a></li>
-          </ol>
-        </nav>
-      </div>
-      <!-- Footer -->
-      <%- include('footer'); -%>
-      </footer>
     </div>
+
   </div>
+  <!-- Page content -->
+  <div class="container-fluid mt--6">
+    <div class="row">
+      <div class="col-xl-12">
+        <div class="card bg-default">
+          <div class="card-header bg-transparent">
+            <div class="row align-items-center">
+              <div class="col">
+                <h6 class="text-light text-uppercase ls-1 mb-1">Overview</h6>
+                <h5 class="h3 text-white mb-0">Points per Round</h5>
+              </div>
+              <div class="col">
+                <ul class="nav nav-pills justify-content-end">
+                  <li class="nav-item mr-2 mr-md-0"
+                      data-toggle="chart"
+                      data-target="#chart-sales-dark"
+                      data-update='{"data":{"datasets":[{"data":[0, 7, 10, 10, 11, 3, 2, 60, 60]}]}}'
+                      data-prefix="$"
+                      data-suffix="k">
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="card-body">
+            <!-- Chart -->
+            <div class="chart">
+              <!-- Chart wrapper -->
+              <canvas id="chart-sales-dark"
+                      class="chart-canvas"></canvas>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div>
+      <nav aria-label="breadcrumb"
+           class="d-none d-md-inline-block ml-md-4">
+        <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
+          <li class="breadcrumb-item"><a href="/scrabble-statistics">Return to Scrabble Statistics</a></li>
+        </ol>
+      </nav>
+    </div>
+    <!-- Footer -->
+    <%- include('footer'); -%>
+  </div>
+</div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <!-- <script src="public/js/vendor/js-cookie/js.cookie.js"></script> -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
-  <!-- <script src="/js/components/vendor/scrollbar.min.js"></script> -->
-  <!-- Argon JS -->
-  <script src="js/argon.js?v=1.2.0"></script>
-</body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
 
-</html>
+<%- include('end_file'); -%>
