--- a/views/scrabble_statistics.ejs
+++ b/views/scrabble_statistics.ejs
@@ -1,58 +1,34 @@
-<!DOCTYPE html>
-<html lang="en"
-      dir="ltr">
+<%- include('partials/header'); -%>
 
-<head>
-  <meta charset="utf-8" />
-
-  <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-        crossorigin="anonymous">
-  <link rel="stylesheet"
-        href="/css/argon.css" />
-  <link rel="stylesheet"
-        href="/css/styles.css" />
-  <!-- Icons -->
-  <script src="https://use.fontawesome.com/3ae882e35b.js"></script>
-  <title>Scrabble</title>
-</head>
-
-<body>
-  <!-- Sidenav -->
-  <%- include('partials/sidenav'); -%>
-  <!-- Main content -->
-  <div class="main-content"
-       id="panel">
-    <!-- Topnav -->
-    <%- include('partials/topnav'); -%>
-    <!-- Header -->
-    <div class="header bg-primary pb-6"
-         style="min-height: 500px; background-image: url(../assets/hannah-rodrigo-mf_3yZnC6ug-unsplash.jpg); background-size: cover; background-position: center top;">
-      <!-- Mask -->
-      <span class="mask bg-gradient-default opacity-3"></span>
-      <div class="container-fluid">
-        <div class="header-body">
-          <div class="row align-items-center py-4">
-            <div class="col-lg-6 col-7">
-              <h6 class="h2 text-white d-inline-block mb-0">
-                Scrabble Statistics</h6>
-              <nav aria-label="breadcrumb"
-                   class="d-none d-md-inline-block ml-md-4">
-              </nav>
-            </div>
+<!-- Sidenav -->
+<%- include('partials/sidenav'); -%>
+<!-- Main content -->
+<div class="main-content"
+     id="panel">
+  <!-- Topnav -->
+  <%- include('partials/topnav'); -%>
+  <!-- Header -->
+  <div class="header bg-primary pb-6"
+       style="min-height: 500px; background-image: url(../assets/hannah-rodrigo-mf_3yZnC6ug-unsplash.jpg); background-size: cover; background-position: center top;">
+    <!-- Mask -->
+    <span class="mask bg-gradient-default opacity-3"></span>
+    <div class="container-fluid">
+      <div class="header-body">
+        <div class="row align-items-center py-4">
+          <div class="col-lg-6 col-7">
+            <h6 class="h2 text-white d-inline-block mb-0">
+              Scrabble Statistics</h6>
+            <nav aria-label="breadcrumb"
+                 class="d-none d-md-inline-block ml-md-4">
+            </nav>
           </div>
-          <!-- Card stats -->
-          <%- include('partials/card_stats'); -%>
         </div>
+        <!-- Card stats -->
+        <%- include('partials/card_stats'); -%>
       </div>
     </div>
-    <%- include('partials/table'); -%>
   </div>
+  <%- include('partials/table'); -%>
+</div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <!-- Argon JS -->
-  <script src="js/argon.js?v=1.2.0"></script>
-</body>
-
-</html>
+<%- include('partials/end_file'); -%>
