--- a/views/partials/topnav.ejs
+++ b/views/partials/topnav.ejs
@@ -33,7 +33,7 @@
       </li>
       <li class="nav-item active float-right">
         <a class="nav-link font-weight-bold"
-           href="/christos">My Profile<span class="sr-only">(current)</span></a>
+           href="/5fae6b01eeab478c1207e2bf">My Profile<span class="sr-only">(current)</span></a>
       </li>
     </ul>
   </div>
